# slugbot

./: .gitignore  go.mod  go.sum
cmd/discord-bot/: main.go
cmd/slugbot/: main.go
commands/: command.go
commands/audio/: stable-audio.go
commands/image/: arc.go  barrel.go  ibarrel.go  ipolar.go  polar.go
helpers/: discord.go  image_helpers.go
internal/commands/: command.go
internal/commands/audio/: slimit.go  stable-audio-with-config.go  stable-audio.go
internal/commands/image/: arc.go  barrel.go  genframes.go  ibarrel.go  ipolar.go  polar.go
internal/commands/traits/: promptable.go
internal/commands/utils/: pollable.go  pollable_test.go
internal/discord/: message-api.go  message.go  message_test.go  polled-message-integration_test.go  polled-message.go  polled-message_test.go
internal/exec/: task_queue.go  task_queue_view.go
internal/helpers/: discord.go
internal/io/slog/: slog.go
internal/utils/: pollable-file-test.go  pollable-file.go
py/: limiter.py
py/env/: general-dsp.yml
stable-audio/: generate.py  parser.py  pyproject.toml  sag
tools/: clone-repo.py  setup_dsp_conda.py  setup_stable_audio.py
